# TP-TLA

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE.md  README.md  compose.yaml
.github/workflows/: pipeline.yaml
src/main/bash/: bison.sh  build.sh  flex.sh  run.sh  test.sh
src/main/c/: EntryPoint.c
src/main/c/backend/code-generation/: Generator.c  Generator.h
src/main/c/backend/domain-specific/: Calculator.c  Calculator.h
src/main/c/frontend/: Frontend.c  Frontend.h
src/main/c/frontend/lexical-analysis/: FlexActions.c  FlexActions.h  FlexExport.h  FlexPatterns.l
src/main/c/frontend/syntactic-analysis/: AbstractSyntaxTree.c  AbstractSyntaxTree.h  BisonActions.c  BisonActions.h  BisonGrammar.y
src/main/c/support/configuration/: Environment.c  Environment.h
src/main/c/support/logging/: Logger.h
src/main/c/support/type/: CompilationStatus.h  CompilerState.h  FlexContext.h  InputBuffer.h  LexicalAnalyzer.h  ModuleDestructor.h  SemanticValue.h  Token.h  TokenLabel.h
src/main/docker/compiler/: Dockerfile
src/test/c/accept/: 08-subexpression
